# Py-PDF-Compare

./: .dockerignore  .gitignore  .npmignore  Containerfile  Dockerfile  MANIFEST.in  README.md  api.Containerfile  api.py  comparator.py  compare_pdf.py  main.py  package.json  pdf-compare.js  pyproject.toml  requirements.txt  verify_alignment.py  verify_tool.py  verify_visuals.py
.github/workflows/: build.yml
lib/: cli.js  index.js  python-bridge.js  setup.js
pdf_compare/: __init__.py  cli.py  comparator.py  config.py  gui.py
python/: comparator.py  compare_pdf.py  config.py  main.py  requirements.txt
sample-scripts/: client-example.js
scripts/: build_linux.py  build_macos.py  build_windows.py  postinstall.js
scripts/pyinstaller_hooks/: rthook_tcltk.py  rthook_tcltk_linux.py
types/: index.d.ts
