[project]
name = "pdf-compare"
version = "2026.1.1-rc1"
description = "PDF comparison tool with GUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
